--- a/views/index.ejs
+++ b/views/index.ejs
@@ -387,14 +387,12 @@
     <div class="container">
         <div class="action-section">
             <div class="action-buttons">
-                <a href="/admin/subject"><button class="btn" style="background-color: green;color: white;"   ><i class="fa-solid fa-file-circle-question" style="color: #ffffff;"></i>Set Question Paper Format</button></a>
-                <a href="/Practical"><button class="btn" style="background-color: rgb(132, 207, 122);color: white;"   ><i class="fa-solid fa-file-circle-question" style="color: #ffffff;"></i>Enter Practical Marks</button></a>
+                <a href="/admin/subject"><button class="btn" style="background-color: green;color: white;"> <i class="fa-solid fa-clipboard-question" style="color: #ffffff;"></i>&ensp;Set Question Paper Format</button></a>
+                <!-- <a href="/Practical"><button class="btn" style="background-color: rgb(132, 207, 122);color: white;"   ><i class="fa-solid fa-file-circle-question" style="color: #ffffff;"></i>Enter Practical Marks</button></a> -->
                 <a href="#subject-section" class="btn btn-primary action-btn">
                     <i class="fas fa-pen-to-square"></i> Enter Data
                 </a>
-                <a href="/teacher/findData" class="btn btn-outline action-btn">
-                    <i class="fas fa-chart-line"></i> View Reports
-                </a>
+               
             </div>
             
             <h2 class="section-title" id="subject-section">Select Subject to Enter Data</h2>
@@ -439,7 +437,7 @@
     
     <footer>
         <div class="footer-content">
-            <p>© <%= new Date().getFullYear() %> Answer Evaluation System | Designed & Developed by Ashraf Ali Miya | Zenith</p>
+            <p>© <%= new Date().getFullYear() %> Answer Analysis System | Designed & Developed by Ashraf Ali Miya | Universal Learning Academy</p>
         </div>
     </footer>
 
